--- a/_output.yml
+++ b/_output.yml
@@ -4,4 +4,8 @@ xaringan::moon_reader:
     highlightStyle: github
     highlightLines: true
     countIncrementalSlides: false
+  includes:
+    after_body: libs/unal/html/scripts.html
+    in_header: libs/unal/html/style.html
+    
     
